# inf-homepage

./: .gitignore  .gitmodules  LICENSE  Makefile  index.html  index.tex  inf-homepage.cabal  papers.bib  publications.bib  site.hs
csl/: ieee.csl
sections/: 0000-00-00-research.md  0000-00-01-publications.md  0000-00-01-publications.tex  0000-00-02-talks.md  0000-00-03-service.md  0000-00-03-teaching.html  0000-00-03-teaching.md  0000-00-04-cv.md  0000-00-04-education.md  0000-00-05-education.md  0000-00-05-links.md  0000-00-06-awards.md  0000-00-06-links.md  0000-00-06-service.md  0000-00-07-links.md
static/css/: bootstrap.customizations.css
talks/: plug_slides2020_12-complete.links  tyde_ant_slides2016_09.links  tyde_slides2016_09.links  unix-dagstuhl2021.links  unix-ml21.links
templates/: page.html  section.html  sections.html
