Name:               inf-homepage
Version:            1.0.0.0
Synopsis:           Personal Informatics research student page of Daniel Hillerström
Description:        Personal Informatics research student page of Daniel Hillerström
Homepage:           http://homepages.inf.ed.ac.uk/s1467124
License:            AllRightsReserved
License-file:       LICENSE
Author:             Daniel Hillerström
Maintainer:         daniel.hillerstrom@ed.ac.uk
Copyright:          (C) 2015 Daniel Hillerström
Category:           Web
Build-type:         Simple
Extra-source-files: README.md
Cabal-version:      >= 1.8

Executable site
  Main-is:        site.hs
  Ghc-options:    -Wall -threaded

  Build-depends:
    base       >= 4.6  && < 4.9,
    hakyll     >= 4.7  && < 4.8,
    pandoc     >= 1.14 && < 1.16,
    time       >= 1.4  && < 1.5,
    old-locale >= 1.0  && < 1.1
    
