Name:               inf-homepage
Version:            0.1.0.0
Synopsis:           Personal Informatics research student page of Daniel Hillerström
Description:        Personal Informatics research student page of Daniel Hillerström
Homepage:           http://homepages.inf.ed.ac.uk/s1467124
License:            AllRightsReserved
License-file:       LICENSE
Author:             Daniel Hillerström
Maintainer:         daniel.hillerstrom@ed.ac.uk
Copyright:          (C) 2015 Daniel Hillerström
Category:           Web
Build-type:         Simple
Extra-source-files: README.md
Cabal-version:      >= 1.10

Executable site
  Main-is:        site.hs
  Ghc-options:    -Wall -threaded
  default-language: Haskell2010

  Build-depends:
    base       >= 4.6  && < 4.9,
    hakyll     >= 4.7  && < 5,
    pandoc     >= 1.14 && < 2,
    time       >= 1.5
    
